[metadata]
name = freeplane_tools
version = file: VERSION
url = https://github.com/shollingsworth/freeplane_tools
project_urls =
    Changes = https://github.com/shollingsworth/freeplane_tools/blob/main/CHANGELOG.md
    Source Code = https://github.com/shollingsworth/freeplane_tools
    Issue Tracker = https://github.com/shollingsworth/freeplane_tools/issues/
    Twitter = https://twitter.com/_stevo
    Documentation = https://shollingsworth.github.io/freeplane_tools/index.html
    # Donate = https://palletsprojects.com/donate
    # Chat = https://discord.gg/pallets

license = MIT
author = Steven Hollingsworth
author_email = hollingsworth.stevend@gmail.com
description = This package provides some tooling around translating freeplane mindmap files into other useful formats
long_description = file: .pypyreadme
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Documentation
    Topic :: Text Editors :: Documentation
keywords =
    freeplane
    mindmap
    markdown

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.package_data]
    * =
        data/*
